# rust-tui

./: .gitignore  Cargo.toml  README.md  doing.toml  old.toml  t.ini  tasks.toml  test.json
config/: old.toml  tasks.toml
src/: PrintTask.rs  app.rs  config.rs  data.rs  database.rs  main.rs  print.rs  print_task.rs  task.rs  tasks.rs  ui.rs
src/tasks/: print.rs
