[package]
name = "t-cli"
version = "0.3.7"
authors = ["Bay"]
description = "A simple CLI task manager"
edition = "2021"
repository = "https://github.com/zX3no/t"
readme = "README.md"
license = "MIT"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "t"
path = "src/main.rs"

[dependencies]
crossterm = "0.22.1"
dirs = "4.0.0"
regex = "1.5.4"
lazy_static = "1.4.0"
rusqlite = { version = "0.26.3", features = ["bundled"] }
chrono = "0.4.19"
