[package]
name = "t-cli"
version = "0.3.13"
authors = ["Bay"]
description = "A simple CLI task manager"
edition = "2021"
repository = "https://github.com/zX3no/t"
readme = "README.md"
license = "MIT"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "t"
path = "src/main.rs"

[dependencies]
crossterm = "0.23.0"
regex = "1.5.4"
rusqlite = { version = "0.27.0", features = ["bundled"] }
chrono = "0.4.19"
